DT-2825: ⬆️  Switch to java 17 (#577)